--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <link rel="alternate" hreflang="en" href="/en/" />
   <link rel="alternate" hreflang="de" href="/de/" />
   <link rel="alternate" hreflang="vi" href="/vi/" />
-  <link rel="alternate" hreflang="x-default" href="/en/" />
+  <link rel="alternate" hreflang="x-default" href="/zh/" />
   <link href="src/css/styles.css" rel="stylesheet" />
 </head>
 
