--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
   <link rel="alternate" hreflang="en" href="/en/about.html" />
   <link rel="alternate" hreflang="de" href="/de/about.html" />
   <link rel="alternate" hreflang="vi" href="/vi/about.html" />
-  <link rel="alternate" hreflang="x-default" href="/en/about.html" />
+  <link rel="alternate" hreflang="x-default" href="/zh/about.html" />
   <link href="/src/css/styles.css" rel="stylesheet" />
 
   <!-- Web App Manifest -->
