--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
   <link rel="alternate" hreflang="en" href="/en/contact.html" />
   <link rel="alternate" hreflang="de" href="/de/contact.html" />
   <link rel="alternate" hreflang="vi" href="/vi/contact.html" />
-  <link rel="alternate" hreflang="x-default" href="/en/contact.html" />
+  <link rel="alternate" hreflang="x-default" href="/zh/contact.html" />
   <link href="/src/css/styles.css" rel="stylesheet" />
 
   <!-- Web App Manifest -->
