--- a/licensing.html
+++ b/licensing.html
@@ -35,7 +35,7 @@
     <link rel="alternate" hreflang="en" href="/en/licensing.html" />
     <link rel="alternate" hreflang="de" href="/de/licensing.html" />
     <link rel="alternate" hreflang="vi" href="/vi/licensing.html" />
-    <link rel="alternate" hreflang="x-default" href="/en/licensing.html" />
+    <link rel="alternate" hreflang="x-default" href="/zh/licensing.html" />
     <link href="/src/css/styles.css" rel="stylesheet" />
 
     <!-- Web App Manifest -->
