--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <title>BentoPDF - Free Online PDF Tools | Privacy-First PDF Toolkit</title>
-  <meta name="title" content="BentoPDF - Free Online PDF Tools | Privacy-First PDF Toolkit">
+  <title>PDF - Free Online PDF Tools | Privacy-First PDF Toolkit</title>
+  <meta name="title" content="PDF - Free Online PDF Tools | Privacy-First PDF Toolkit">
   <meta name="description"
     content="★ Free online PDF tools - Merge, split, compress, convert PDFs ★ 100% browser-based ★ No signup required ★ Unlimited files ★ Privacy-first & secure ★ Works offline ★ 100+ PDF tools">
   <meta name="keywords"
