--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta property="og:title" content="BentoPDF - Free Online PDF Tools | Privacy-First PDF Toolkit">
   <meta property="og:description"
     content="Free online PDF toolkit with 100+ tools. Merge, split, compress, convert PDFs - 100% browser-based, no signup, unlimited files, privacy-first.">
-  <meta property="og:image" content="https://www.bentopdf.com/images/og-home.png">
+  <meta property="og:image" content="https://pdf.550010.xyz/images/og-home.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:site_name" content="BentoPDF">
@@ -36,7 +36,7 @@
   <meta name="twitter:title" content="BentoPDF - Free Online PDF Tools">
   <meta name="twitter:description"
     content="Free PDF tools that run in your browser. Merge, split, compress, convert - all free, no signup, privacy-first.">
-  <meta name="twitter:image" content="https://www.bentopdf.com/images/twitter-home.png">
+  <meta name="twitter:image" content="https://pdf.550010.xyz/images/twitter-home.png">
   <meta name="twitter:site" content="@BentoPDF">
   <meta name="twitter:creator" content="@BentoPDF">
 
@@ -82,7 +82,7 @@
           <a href="/contact.html" class="nav-link" data-i18n="nav.contact">Contact</a>
           <a href="/licensing.html" class="nav-link" data-i18n="nav.licensing">Licensing</a>
           <a href="index.html#tools-header" class="nav-link" data-i18n="nav.allTools">All Tools</a>
-          <a href="https://github.com/alam00000/bentopdf/" target="_blank" rel="noopener noreferrer" class="
+          <a href="" target="_blank" rel="noopener noreferrer" class="
             inline-flex items-center gap-1.5 text-sm font-medium
             bg-gray-800 text-gray-200 border border-gray-600
             pl-2.5 pr-3 py-1
@@ -806,7 +806,7 @@
     "@type": "Organization",
     "name": "BentoPDF",
     "url": "https://www.bentopdf.com",
-    "logo": "https://www.bentopdf.com/images/favicon.svg",
+    "logo": "https://pdf.550010.xyz/images/favicon.svg",
     "description": "Privacy-first, free online PDF toolkit",
     "sameAs": [
       "https://pdf.550010.xyz/",
