--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <a href="/contact.html" class="nav-link" data-i18n="nav.contact">Contact</a>
           <a href="/licensing.html" class="nav-link" data-i18n="nav.licensing">Licensing</a>
           <a href="index.html#tools-header" class="nav-link" data-i18n="nav.allTools">All Tools</a>
-          <a href="" target="_blank" rel="noopener noreferrer" class="
+          <a href="https://pdf.550010.xyz/" target="_blank" rel="noopener noreferrer" class="
             inline-flex items-center gap-1.5 text-sm font-medium
             bg-gray-800 text-gray-200 border border-gray-600
             pl-2.5 pr-3 py-1
@@ -100,7 +100,7 @@
 
         <!-- Mobile Hamburger Button -->
         <div class="md:hidden flex items-center gap-4">
-          <a href="https://github.com/alam00000/bentopdf/" target="_blank" rel="noopener noreferrer" class="
+          <a href="https://pdf.550010.xyz/" target="_blank" rel="noopener noreferrer" class="
             inline-flex items-center gap-1.5 text-sm font-medium
             bg-gray-800 text-gray-200 border border-gray-600
             pl-2.5 pr-3 py-1
